# real-estate-agentic-system

./: .env.example  .gitignore  APPROACH.md  README.md  docker-compose.yml  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_rag_schema.py  003_document_chunks_doc_id_idx.py  004_document_file_size_bytes.py  005_messages_ragas_metrics.py
backend/: Dockerfile
backend/src/takehome/: config.py
backend/src/takehome/agent/: __init__.py  graph.py  nodes.py  prompts.py  ragas_eval.py  state.py  tools.py  utils.py
backend/src/takehome/agent/crag_vector_graph/: __init__.py  graph.py  nodes.py  prompts.py  run.py  state.py
backend/src/takehome/db/: models.py  session.py
backend/src/takehome/services/: conversation.py  document.py
backend/src/takehome/web/: app.py
backend/src/takehome/web/routers/: __init__.py  conversations.py  documents.py  messages.py
frontend/: index.html  tailwind.config.js
frontend/src/: App.tsx  constants.ts  index.css  types.ts
frontend/src/components/: AgentSteps.tsx  ChatInput.tsx  ChatSidebar.tsx  ChatWindow.tsx  CitationBadge.tsx  CitationsPanel.tsx  DocumentsPanel.tsx  EmptyState.tsx  MessageBubble.tsx  PdfPageModal.tsx  RagasMetricsStrip.tsx
frontend/src/components/ui/: scroll-area.tsx  tooltip.tsx
frontend/src/hooks/: use-document.ts  use-messages.ts
frontend/src/lib/: api.ts  utils.ts
