[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/takehome"]

[project]
name = "orbital-takehome"
version = "0.1.0"
description = "Document Q&A tool for commercial real estate lawyers"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database (SQLAlchemy + asyncpg)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    # Database (psycopg3 -- used by LangGraph checkpointer + LangChain PGVectorStore)
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    # pgvector SQLAlchemy type
    "pgvector>=0.3.0",
    # LangGraph agent framework
    "langgraph>=0.2.70",
    "langgraph-checkpoint-postgres>=2.0.0",
    # LangChain integrations
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-postgres>=0.0.12",
    "langchain-community>=0.3.0",
    # Document parsing + OCR
    "docling>=2.0.0",
    "pytesseract>=0.3.10",
    # Web search
    "tavily-python>=0.5.0",
    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    # Tokenization
    "tiktoken>=0.8.0",
    # HTTP client
    "httpx>=0.27.0",
    # Settings
    "pydantic-settings>=2.0.0",
    # Logging
    "structlog>=25.1.0",
    # File upload
    "python-multipart>=0.0.9",
    # Environment
    "python-dotenv>=1.0.0",
    # RAG evaluation (async worker)
    "ragas>=0.2.0",
    "datasets>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["takehome"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
extraPaths = ["backend/src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
